--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer-links{
-    display: grid; 
+    /* display: grid; 
   grid-template-columns: 1fr 1fr; 
-  grid-template-rows: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr 1fr;  */
   gap: 1rem 1.2rem;
   font-size: 0.8rem;
 }
