--- a/src/styles/SecondCard.css
+++ b/src/styles/SecondCard.css
@@ -8,7 +8,13 @@
     z-index: 2;
     width: 100vw;
 }
-.second-animate {
-    border-bottom: 8px solid #222;
-    padding-bottom: 3rem;
+
+@media screen and (min-width: 949px) {
+    .second-video{
+        width: 35%;
+    }
+    .second{
+        display: flex;
+        align-items: center;
+    }
 }
