--- a/src/styles/YoungCard.css
+++ b/src/styles/YoungCard.css
@@ -1,4 +1,10 @@
-.young-image{
-    border-bottom: 8px solid #222;
-    padding-bottom: 3rem;
+@media screen and (min-width: 950px){
+    .young-container{
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    .young{
+        text-align: left;
+    }
 }
