finished the responsive part, cleaned every files

--- a/src/styles/DevicesCard.css
+++ b/src/styles/DevicesCard.css
@@ -1,27 +1,31 @@
-.devices-video{
+.devices-video {
     position: absolute;
-    margin-top: -10%;  
+    margin-top: -10%;
     width: 60%;
+    min-width: 169px;
+    max-width: 411px;
 }
 
-.devices-image{
+.devices-image {
     position: relative;
     z-index: 2;
-    width: 100vw;
+    max-width: 950px;
+    min-width: 370px;
 }
 
-@media screen and (min-width: 550px) and (max-width: 949px) {
-    .devices-video{
-        width: 50%;
+@media screen and (min-width: 950px) {
+    .devices-video {
+        margin-top: -7%;
     }
-  }
 
-  @media screen and (min-width: 950px) and (max-width: 1450px) {
-    .devices-video{
-        width: 25%;
-        margin-top: -5%;
-    }
-    .devices{
+    .devices {
         display: flex;
     }
-  }
+}
+
+
+@media screen and (min-width: 1450px) {
+    .devices-video {
+        margin-top: -3%;
+    }
+}
