--- a/src/styles/SecondCard.css
+++ b/src/styles/SecondCard.css
@@ -1,19 +1,16 @@
-.second-video{
-    position: absolute;    
-    width: 80%;
+.second-video {
+    position: absolute;
 }
 
-.second-image{
+.second-image {
     position: relative;
     z-index: 2;
-    width: 100vw;
+    max-width: 950px;
+    min-width: 370px;
 }
 
 @media screen and (min-width: 949px) {
-    .second-video{
-        width: 35%;
-    }
-    .second{
+    .second {
         display: flex;
         align-items: center;
     }
